# src/http/server.ts
@@ -6,6 +6,7 @@ import categoryRouter from "../routes/categoryRoutes";
 import swaggerUI from "swagger-ui-express";
 import swaggerDocs from "../../swagger.json";
 import { main } from "../config/database";
+import { authenticate } from "../middlewares/authMiddleware";
 
 const app = express();
 const port = 8080;
@@ -14,6 +15,7 @@ app.use(express.json());
 app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDocs));
 
 app.use("/api/v1", authRouter);
+app.use("/api/v1", authenticate);
 app.use("/api/v1", categoryRouter);
 app.use("/api/v1", itemRouter);
 app.use("/api/v1", shoppingListRouter);
